--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<li><a href="PRACTICA 1 Tablas.html">Práctica 1 -</a></li>
 			<li><a href="">Práctica 2 -</a></li>
 			<li><a href="">Práctica 3 -</a></li>
-			<li><a href="Examen pracico/Examen.html">Examen practico 1 -</a></li>
+			<li><a href="Examen practico/Examen.html">Examen practico 1 -</a></li>
 		</ol>
 		<li>Parcial 2</li>
 		<li>Parcial 3</li>
