--- a/Examen.html
+++ b/Examen.html
@@ -135,13 +135,13 @@
 				<table style=" table-layout: fixed;  background-color: #005187 ; color: black" width="80%" align="center">
 					<tr>
 						<th width="50px" height="50px">
-							<img src="imagenes/imagen2.png" width="80%"alt="Frutas" width="80%" usemap="#mapa1">
+							<img src="imagenes/Imagen2.png" width="80%"alt="Frutas" width="80%" usemap="#mapa1">
 							<map name="mapa1">
 							<area shape="circle" coords="0,0,450,450" href="https://super.walmart.com.mx/content/frutas-y-verduras/120007">
 						</map>
 						</th>
 						<th width="50px">
-							<img src="imagenes/imagen5.png" width="80%"alt="Electrodomesticos" width="80%" usemap="#mapa2">
+							<img src="imagenes/Imagen5.png" width="80%"alt="Electrodomesticos" width="80%" usemap="#mapa2">
 							<map name="mapa2">
 							<area shape="circle" coords="0,0,450,450" href="https://super.walmart.com.mx/content/articulos-para-el-hogar-y-autos/electrodomesticos/3450016_3450138">
 						</map>
@@ -157,13 +157,13 @@
 					</tr>
 					<tr>
 						<th width="50px" height="50px">
-							<img src="imagenes/imagen4.png" width="80%"alt="Viveres" width="80%" usemap="#mapa3">
+							<img src="imagenes/Imagen4.png" width="80%"alt="Viveres" width="80%" usemap="#mapa3">
 							<map name="mapa3">
 							<area shape="circle" coords="0,0,450,450" href="https://super.walmart.com.mx/content/abarrotes/120005">
 						</map>
 						</th>
 						<th width="50px">
-							<img src="imagenes/imagen3.png" width="80%"alt="Viveres" width="80%" usemap="#mapa4">
+							<img src="imagenes/Imagen3.png" width="80%"alt="Viveres" width="80%" usemap="#mapa4">
 							<map name="mapa4">
 							<area shape="circle" coords="0,0,450,450" href="https://super.walmart.com.mx/content/electronica/2910049">
 						</map>
