--- a/index.html
+++ b/index.html
@@ -82,10 +82,15 @@
 		<ol>
 			<li><a href="PRACTICA 1 Tablas.html">Práctica 1 -</a></li>
 			<li><a href="PRACTICA 2.html">Práctica 2 -</a></li>
-			<li><a href="">Práctica 3 -</a></li>
 			<li><a href="Examen.html">Examen practico 1 </a></li>
 		</ol>
 		<li>Parcial 2</li>
+		<ol>
+			<li><a href="Practica 1 forms.html">Práctica 1 -</a></li>
+			<li><a href="">Práctica 2 -</a></li>
+			<li><a href="">Práctica 3 -</a></li>
+			<li><a href="">Examen practico 1 </a></li>
+		</ol>
 		<li>Parcial 3</li>
 		<li>Protecto final</li>
 	</ul>
