--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<li>Parcial 2</li>
 		<ol>
 			<li><a href="Practica 1 forms.html">Práctica 1 -</a></li>
-			<li><a href="">Práctica 2 -</a></li>
+			<li><a href="TwinTechTrends.pdf">Práctica 2 -</a></li>
 			<li><a href="">Práctica 3 -</a></li>
 			<li><a href="">Examen practico 1 </a></li>
 		</ol>
