--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<li><a href="">Examen practico 1 </a></li>
 		</ol>
 		<li>Parcial 3</li>
-		<li><a href="inicio.html">Protecto final</li>
+		<li><a href="Inicio.html">Protecto final</li>
 	</ul>
 </body>
 </html>
