--- a/informacion.html
+++ b/informacion.html
@@ -10,8 +10,8 @@
 	
 
 <ul class="menu">
-  <li><a href="inicio.html" >INICIO</a></li>
-  <li><a href="#">Informacion</a></li>
+  <li><a href="Inicio.html" >INICIO</a></li>
+  <li><a href="informacion.html">Informacion</a></li>
   <li><a href="#">Impacto</a></li>
   <li><a href="#">Situacion actual</a></li>
   <li><a href="#">Vision a futuro</a></li>
