--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		<ol>
 			<li><a href="Practica 1 forms.html">Práctica 1 -</a></li>
 			<li><a href="Practica2Par2/Practica2 Reglas CSS.html">Práctica 2 Estilos -</a></li>
-			<li><a href="">Práctica 3 -</a></li>
+			<li><a href="Practica2Par2/Practica 3 formato.html">Práctica 3 -</a></li>
 			<li><a href="">Examen practico 1 </a></li>
 		</ol>
 		<li>Parcial 3</li>
