--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<li><a href="">Práctica 3 -</a></li>
 			<li><a href="">Examen practico 1 </a></li>
 		</ol>
-		<li><a href="Inicio.html">Protecto final</li>
+		<li><a href="PROYECTO WEB/Inicio.html">Protecto final</li>
 	</ul>
 </body>
 </html>
