--- a/PROYECTO WEB/vision a futuro.html
+++ b/PROYECTO WEB/vision a futuro.html
@@ -8,7 +8,7 @@
 <body>
   <div class="cuadro-flotante3"> <h5><font color="#45A29E">V</font>ision a <font color="#45A29E">F</font>uturo</h5></div>
 	<ul class="menu">
-  <li><a href="inicio.html" >INICIO</a></li>
+  <li><a href="Inicio.html" >INICIO</a></li>
   <li><a href="informacion.html">Informacion</a></li>
   <li><a href="impacto.html">Impacto</a></li>
   <li><a href="situacion actual.html">Situacion actual</a></li>
