--- a/PROYECTO WEB/Inicio.html
+++ b/PROYECTO WEB/Inicio.html
@@ -9,7 +9,7 @@
 	<div class="cuadro-flotante3"><h1><font color="#45A29E">T</font>win<font color="#45A29E">T</font>ech<font color="#45A29E">T</font>rends</h1></div>
 
 <ul class="menu">
-  <li><a href="inicio.html">INICIO</a></li>
+  <li><a href="Inicio.html">INICIO</a></li>
   <li><a href="informacion.html">Informacion</a></li>
   <li><a href="impacto.html">Impacto</a></li>
   <li><a href="situacion actual.html">Situacion actual</a></li>
