--- a/PROYECTO WEB/impacto.html
+++ b/PROYECTO WEB/impacto.html
@@ -10,7 +10,7 @@
     <h1><font color="#45A29E">I</font>mpacto</h1>
 
     <ul class="menu">
-    <li><a href="index.html" class="active">INICIO</a></li>
+    <li><a href="Inicio.html" class="active">INICIO</a></li>
     <li><a href="informacion.html">Informacion</a></li>
     <li><a href="impacto.html">Impacto</a></li>
     <li><a href="situacion actual.html">Situacion actual</a></li>
