--- a/PROYECTO WEB/informacion.html
+++ b/PROYECTO WEB/informacion.html
@@ -8,7 +8,7 @@
 <body>
   <div class="cuadro-flotante3"> <h1><font color="#45A29E">I</font>nformacion</h1></div>
 	<ul class="menu">
-  <li><a href="inicio.html" >INICIO</a></li>
+  <li><a href="Inicio.html" >INICIO</a></li>
   <li><a href="informacion.html">Informacion</a></li>
   <li><a href="impacto.html">Impacto</a></li>
   <li><a href="situacion actual.html">Situacion actual</a></li>
