--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		<li>Parcial 3</li>
 		<ol>
 			<li><a href="Inforgrafia java.pdf">Práctica 1 -</a></li>
-			<li><a href="">Práctica 2 Estilos -</a></li>
+			<li><a href="Practica1Par3/Practica1Par3.html">Práctica 1 portafolio -</a></li>
 			<li><a href="">Práctica 3 -</a></li>
 			<li><a href="">Examen practico 1 </a></li>
 		</ol>
