--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<ol>
 			<li><a href="Inforgrafia java.pdf">Práctica 1 -</a></li>
 			<li><a href="Practica1Par3/Practica1Par3.html">Práctica 1 portafolio -</a></li>
-			<li><a href="">Práctica 3 -</a></li>
+			<li><a href="Practica3P3/Practica1P3.html">Práctica 3 -</a></li>
 			<li><a href="">Examen practico 1 </a></li>
 		</ol>
 		<li><a href="PROYECTO WEB/Inicio.html">Protecto final</li>
