--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 		<ol>
 			<li><a href="Infografia java.pdf">Práctica 1 -</a></li>
 			<li><a href="Practica1Par3/Practica1Par3.html">Práctica 1 portafolio -</a></li>
+			<li><a href="Practica2Par3/Practica2Par3.html">Práctica 2 -</a></li>
 			<li><a href="Practica3P3/Practica3P3.html">Práctica 3 -</a></li>
 			<li><a href="">Examen practico 1 </a></li>
 		</ol>
