--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 			<li><a href="Practica2Par3/Practica2Par3.html">Práctica 2 -</a></li>
 			<li><a href="Practica3P3/Practica3P3.html">Práctica 3 -</a></li>
 			<li><a href="Practica4Par3/Practica4Par3.html">Práctica 4 -</a></li>
+			<li><a href="ObtenerTotales/ObtenerTotales.html">Práctica 5 (Evaluar cuestionario y generar PDF) -</a></li>
 			<li><a href="">Examen practico 1 </a></li>
 		</ol>
 		<li><a href="PROYECTO WEB/Inicio.html">Protecto final</li>
