--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@
 		<li>Parcial 3</li>
 		<ol>
 			<li><a href="Infografia java.pdf">Práctica 1 -</a></li>
-			<li><a href="Practica1Par3/Practica1Par3.html">Práctica 1 portafolio -</a></li>
-			<li><a href="Practica2Par3/Practica2Par3.html">Práctica 2 -</a></li>
-			<li><a href="Practica3P3/Practica3P3.html">Práctica 3 -</a></li>
-			<li><a href="Practica4Par3/Practica4Par3.html">Práctica 4 -</a></li>
-			<li><a href="ObtenerTotales/ObtenerTotales.html">Práctica 5 (Evaluar cuestionario y generar PDF) -</a></li>
+			<li><a href="Practica1Par3/Practica1Par3.html">Práctica 1 portafolio </a></li>
+			<li><a href="Practica2Par3/Practica2Par3.html">Práctica 2 </a></li>
+			<li><a href="Practica3P3/Practica3P3.html">Práctica 3 </a></li>
+			<li><a href="Practica4Par3/Practica4Par3.html">Práctica 4 </a></li>
+			<li><a href="ObtenerTotales/ObtenerTotales.html">Práctica 5</a></li>
+			<li><a href="ObtenerTotales/Practica6Par3.html">Práctica 6</a></li>
+			<li><a href="ObtenerTotales/Practica7Par3.html">Práctica 7</a></li>
 			<li><a href="">Examen practico 1 </a></li>
 		</ol>
 		<li><a href="PROYECTO WEB/Inicio.html">Protecto final</li>
