--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 			<li><a href="Practica3P3/Practica3P3.html">Práctica 3 </a></li>
 			<li><a href="Practica4Par3/Practica4Par3.html">Práctica 4 </a></li>
 			<li><a href="ObtenerTotales/ObtenerTotales.html">Práctica 5</a></li>
-			<li><a href="ObtenerTotales/Practica6Par3.html">Práctica 6</a></li>
-			<li><a href="ObtenerTotales/Practica7Par3.html">Práctica 7</a></li>
+			<li><a href="Practica6Par3/JavaValidacion.html">Práctica 6</a></li>
+			<li><a href="Practica7Par3/carrousel.html">Práctica 7</a></li>
 			<li><a href="">Examen practico 1 </a></li>
 		</ol>
 		<li><a href="PROYECTO WEB/Inicio.html">Protecto final</li>
