--- a/PROYECTO WEB/Inicio.html
+++ b/PROYECTO WEB/Inicio.html
@@ -28,7 +28,7 @@
   <li><a style="text-decoration: none; color: #fff;" href="vision a futuro.html">Vision a futuro</a></li>
   <li><a style="text-decoration: none; color: #fff;" href="Interaccion.html">Interaccion</a></li>
   <li><a style="text-decoration: none; color: #fff;" href="galeria.html">Galeria</a></li>
-  <li><a style="text-decoration: none; color: #fff;" href="ayuda.html">Ayuda</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="Ayuda.html">Ayuda</a></li>
   <li class="slider"></li>
 </ul>
 
