--- a/PROYECTO WEB/Inicio.html
+++ b/PROYECTO WEB/Inicio.html
@@ -21,7 +21,7 @@
 	<div class="cuadro-flotante3"><h1 style="  font-size: 3.5vw; margin-top: 1.5%"><font color="#45A29E">T</font>win<font color="#45A29E">T</font>ech<font color="#45A29E">T</font>rends</h1></div>
 
 <ul class="menu">
-  <li><a style="text-decoration: none; color: #fff;" href="inicio.html">INICIO</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="Inicio.html">INICIO</a></li>
   <li><a style="text-decoration: none; color: #fff;" href="informacion.html">Informacion</a></li>
   <li><a style="text-decoration: none; color: #fff;" href="impacto.html">Impacto</a></li>
   <li><a style="text-decoration: none; color: #fff;" href="situacionActual.html">Situacion actual</a></li>
