--- a/PROYECTO WEB/Interaccion.html
+++ b/PROYECTO WEB/Interaccion.html
@@ -117,16 +117,16 @@
 <body>
     <div class="cuadro-flotante3"> <h1 style="  font-size: 2.7vw; margin-top: 1.5%"><font color="#45A29E">I</font>NTERACCION</h1></div>
     <ul class="menu">
-      <li><a style="text-decoration: none; color: #fff;" href="inicio.html">INICIO</a></li>
-      <li><a style="text-decoration: none; color: #fff;" href="informacion.html">Informacion</a></li>
-      <li><a style="text-decoration: none; color: #fff;" href="impacto.html">Impacto</a></li>
-      <li><a style="text-decoration: none; color: #fff;" href="situacionActual.html">Situacion actual</a></li>
-      <li><a style="text-decoration: none; color: #fff;" href="vision a futuro.html">Vision a futuro</a></li>
-      <li><a style="text-decoration: none; color: #fff;" href="Interaccion.html">Interaccion</a></li>
-      <li><a style="text-decoration: none; color: #fff;" href="galeria.html">Galeria</a></li>
-      <li><a style="text-decoration: none; color: #fff;" href="Ayuda.html">Ayuda</a></li>
-      <li class="slider"></li>
-    </ul>
+  <li><a style="text-decoration: none; color: #fff;" href="Inicio.html">INICIO</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="informacion.html">Informacion</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="impacto.html">Impacto</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="situacionActual.html">Situacion actual</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="vision a futuro.html">Vision a futuro</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="Interaccion.html">Interaccion</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="galeria.html">Galeria</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="Ayuda.html">Ayuda</a></li>
+  <li class="slider"></li>
+</ul>
 
 
     <section class="section" style="background-color: #03C0C1; margin-top: 10%; height: 105px">
