--- a/PROYECTO WEB/galeria.html
+++ b/PROYECTO WEB/galeria.html
@@ -20,16 +20,16 @@
 	<div class="cuadro-flotante3"><h4 style="  font-size: 3.5vw; margin-top: 1.5%"><font color="#45A29E">G</font>aleria</h4></div>
 
 	<ul class="menu">
-	  <li><a style="text-decoration: none; color: #fff;" href="inicio.html">INICIO</a></li>
-	  <li><a style="text-decoration: none; color: #fff;" href="informacion.html">Informacion</a></li>
-	  <li><a style="text-decoration: none; color: #fff;" href="impacto.html">Impacto</a></li>
-	  <li><a style="text-decoration: none; color: #fff;" href="situacionActual.html">Situacion actual</a></li>
-	  <li><a style="text-decoration: none; color: #fff;" href="vision a futuro.html">Vision a futuro</a></li>
-	  <li><a style="text-decoration: none; color: #fff;" href="Interaccion.html">Interaccion</a></li>
-	  <li><a style="text-decoration: none; color: #fff;" href="galeria.html">Galeria</a></li>
-	  <li><a style="text-decoration: none; color: #fff;" href="ayuda.html">Ayuda</a></li>
-	  <li class="slider"></li>
-	</ul>
+  <li><a style="text-decoration: none; color: #fff;" href="Inicio.html">INICIO</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="informacion.html">Informacion</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="impacto.html">Impacto</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="situacionActual.html">Situacion actual</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="vision a futuro.html">Vision a futuro</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="Interaccion.html">Interaccion</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="galeria.html">Galeria</a></li>
+  <li><a style="text-decoration: none; color: #fff;" href="Ayuda.html">Ayuda</a></li>
+  <li class="slider"></li>
+</ul>
 
 	<div class="container-fluid p-0" style="margin-top: 9%">
         <div id="blog-carousel" class="carousel slide" data-ride="carousel">
