--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<li><a href="ObtenerTotales/ObtenerTotales.html">Práctica 5</a></li>
 			<li><a href="Practica6P3/Practica6Par3/JavaValidacion.html">Práctica 6</a></li>
 			<li><a href="Practica7Par3/carrousel.html">Práctica 7</a></li>
-			<li><a href="">Examen practico 1 </a></li>
+			<li><a href="ExamenPar3/ExamenPar3.html">Examen practico 1 </a></li>
 		</ol>
 		<li><a href="PROYECTO WEB/Inicio.html">Protecto final</li>
 	</ul>
